# GaloisField

./: CMakeLists.txt
GF2/: CMakeLists.txt  SmallPolynomialOverF2.cpp
GF2/include/GF2/: FiniteFieldOverF2.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  SmallPolynomialOverF2.h  main.cpp
test/: CMakeLists.txt  GF2_polynomials_tests.cpp  GF2_tests.cpp
